Fix/installing redirect issue (#112)
* fixing

* fixing

* fixing

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ APP_INSTALLED=false
 
 FILESYSTEM_DRIVER=local
 
+DEMO_EMAIL=admin@seeder.com
+DEMO_PASSWORD=secret
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
